# earth-defenders-assistant

./: .cursorrules  .gitignore  LICENSE.md  README.md  biome.json  bun.lockb  config.example.yaml  index.html  lefthook.yml  package.json  tsconfig.json  turbo.json
.github/workflows/: check.yml  ci.yml  github-pages.yml  stacks.yml
apps/ai_api/: .env.example  .flake8  .gitignore  MANIFEST  README.md  package.json  pyproject.toml  setup.cfg  tox.ini
apps/ai_api/eda_ai_api/: main.py
apps/ai_api/eda_ai_api/agents/: conversation_summary_agent.py  document_search_agent.py  global_knowledge_agent.py  manager.py  memory_search_agent.py
apps/ai_api/eda_ai_api/agents/prompts/: formatting.py  manager.j2  manager.py
apps/ai_api/eda_ai_api/agents/tools/: __init__.py  conversation_history.py  document_search.py  global_knowledge_search.py  memory_search.py
apps/ai_api/eda_ai_api/api/routes/: classifier.py  document_handler.py  global_knowledge_handler.py  grant.py  heartbeat.py  message_handler.py  onboarding.py  profile_plugin.py  router.py  supervisor.py  transcription_handler.py  tts_handler.py
apps/ai_api/eda_ai_api/core/: config.py  event_handlers.py  security.py
apps/ai_api/eda_ai_api/models/: classifier.py  document_handler.py  global_knowledge_handler.py  grant_discovery.py  grant_proposal.py  message_handler.py  onboarding.py  profile_plugin.py  supervisor.py  tts_handler.py
apps/ai_api/eda_ai_api/utils/: attachment_utils.py  audio_converter.py  audio_utils.py  context_builder.py  error_handler.py  exceptions.py  logger.py  memory.py  memory_manager.py  prompts.py  transcriber.py  tts_service.py  validation.py  vector_memory.py
apps/ai_api/scripts/: inspect_chroma.py  linting.sh  test.sh
apps/ai_api/tests/: conftest.py
apps/ai_api/tests/test_api/: test_api_auth.py  test_grant_discovery.py  test_heartbeat.py
apps/ai_api/tests/test_service/: test_models.py
apps/api/: .env.example  package.json
apps/api/pocketbase/pb_migrations/: 1743784417_created_botUsers.js  1743784520_created_messages.js
apps/api/supabase/: config.toml
apps/api/supabase/functions/: import_map.json
apps/api/supabase/functions/send-email/: index.ts
apps/api/supabase/migrations/: 20241011023836_create_received_message_table.sql  20241011151736_create_tosend_message_table.sql  20250319020658_create_schema.sql
apps/dashboard/: next.config.mjs  package.json  sentry.server.config.ts  tailwind.config.ts
apps/dashboard/src/: env.mjs  middleware.ts  server.ts
apps/dashboard/src/actions/: safe-action.ts
apps/dashboard/src/actions/user/: update-post-action.ts
apps/dashboard/src/app/[locale]/: layout.tsx
apps/dashboard/src/app/api/: actions.ts
apps/dashboard/src/components/: footer.tsx  google-signin.tsx  sign-out.tsx
apps/dashboard/src/components/posts/: posts.server.tsx
apps/docs/: astro.config.mjs  package.json  tsconfig.json
apps/landingpage/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.js
apps/landingpage/src/: App.jsx  i18n.js  nav-items.jsx
apps/landingpage/src/components/custom/: AboutSection.jsx  CallToAction.jsx  ContactSection.jsx  FeaturesSection.jsx  Footer.jsx  Header.jsx  HeroSection.jsx  HowItWorksSection.jsx  ProsAndConsSection.jsx  animated-map.css  animated-map.jsx  buttonStyles.css  (+2 more)
apps/landingpage/src/pages/: Index.jsx
apps/messaging/: .env.example  README.md  package.json  tsconfig.json
apps/messaging/src/: index.ts  routes.ts  types.ts
apps/whatsapp/: .env.example  .gitignore  Dockerfile  README.md  index.ts  package.json
apps/whatsapp/src/: client.ts  constants.ts  database.ts  messageHandler.ts  schemas.ts  types.ts  utils.ts
apps/whatsapp/src/commands/: commands_index.ts  help.ts  invalid_command.ts
apps/whatsapp/src/handlers/: audioHandler.ts  documentHandler.ts
apps/whatsapp/src/message/: message.ts
apps/whatsapp/src/tests/: database.test.ts  messageHandler.test.ts  utils.test.ts  utils.ts
apps/whatsapp/src/trigger/: client.ts  jobs.ts
apps/whatsapp/src/utils/: message-storage.ts  tts.ts  whatsapp.ts
assets/: DEVELOPMENT.md  PLUGINS.md  ROADMAP.md  index-CmAnbWKL.js  index-Crh0Le6i.js  index-e42p6Ee_.css
credentials/: README.md
deploy/langtrace-stack/: .env.example  deploy.sh  docker-compose.yml  export-config.ts
deploy/neo4j-stack/: docker-compose.yml  export-config.ts
deploy/trigger-stack/: .env.example  deploy.sh  docker-compose.yml  export-config.ts
deploy/zep-stack/: .env.example  docker-compose.yml  zep.yaml
plugins/grant_plugin/opportunity_finder/: .env.example  README.md  pyproject.toml
plugins/grant_plugin/opportunity_finder/src/opportunity_finder/: crew.py  main.py
plugins/grant_plugin/opportunity_finder/src/opportunity_finder/config/: agents.yaml  tasks.yaml
plugins/grant_plugin/proposal_writer/: .env.example  README.md  pyproject.toml
plugins/grant_plugin/proposal_writer/src/proposal_writer/: crew.py  main.py
plugins/grant_plugin/proposal_writer/src/proposal_writer/config/: agents.yaml  tasks.yaml
plugins/onboarding/: .env.example  bot_guide.md  pyproject.toml
plugins/onboarding/src/onboarding/: crew.py  main.py
plugins/onboarding/src/onboarding/config/: tasks.yaml
plugins/product_support_plugin/: .dockerignore  Dockerfile  README.md  cli.py  main.py  pyproject.toml  telegram_bot.py
plugins/product_support_plugin/documentation/: mapeo.txt
plugins/product_support_plugin/src/: cli.py  main.py  telegram_bot.py
plugins/profile_plugin/: README.md  pyproject.toml
plugins/profile_plugin/src/profile_plugin/: crew.py  main.py  test_profile.py
plugins/profile_plugin/src/profile_plugin/config/: agents.yaml  tasks.yaml
plugins/profile_plugin/src/profile_plugin/tools/: custom_tools.py  profile_fetcher.py
plugins/supervisor/: README.md  pyproject.toml
plugins/supervisor/src/opportunity_finder/: main.py
plugins/supervisor/src/opportunity_finder/config/: agents.yaml
plugins/supervisor/src/supervisor/: crew.py  main.py
plugins/supervisor/src/supervisor/config/: tasks.yaml
tooling/scripts/: get-port.ts
tooling/typescript/: package.json
(+3 files in other folders)
