[project]
name = "eda.ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "uvicorn>=0.25.0",
    "fastapi>=0.109.1",
    "numpy>=1.26.2",
    "joblib>=1.3.2",
    "loguru>=0.7.2",
    "pydantic>=2.5.3",
    "langchain-groq>=0.2.1",
    "eda-config",
    "ffmpeg-python>=0.2.0",
    "python-multipart>=0.0.17",
    "httpx>=0.24.0,<0.25.0",
    "mem0ai>=0.1.25",
    "rank-bm25>=0.2.2",
    "neo4j>=5.27.0",
    "langchain>=0.3.4",
    "langgraph>=0.2.35",
    "anthropic>=0.42.0",
    "deepseek>=0.1.0",
    "groq>=0.4.0",
    "smolagents>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "mypy>=1.8.0", 
    "black>=24.3.0",
    "flake8>=6.1.0",
    "bandit>=1.7.6",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0"
]

[project.scripts]
run = "eda_ai_api.main:app"

[tool.uv.sources]
eda-config = { path = "../../packages/config/python" }
