[project]
name = "eda.ai-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "uvicorn>=0.25.0",
    "fastapi>=0.109.1",
    "numpy>=1.26.2",
    "joblib>=1.3.2",
    "loguru>=0.7.2",
    "eda-config",
    "python-multipart>=0.0.17",
    "smolagents[litellm,vision]>=1.17.0",
    "httpx==0.27.2",
    "langchain-groq>=0.2.5",
    "pydantic>=2.9.2",
    "ffmpeg-python>=0.2.0",
    "mem0ai>=0.1.70",
    "langchain>=0.3.24",
    "anthropic>=0.49.0",
    "deepseek>=1.0.0",
    "groq>=0.12.0",
    "neo4j>=5.28.1",
    "rank-bm25>=0.2.2",
    "pocketbase>=0.15.0",
    "chromadb>=1.0.7",
    "sentence-transformers>=4.1.0",
    "langchain-community>=0.3.20",
    "langchain-core>=0.3.45",
    "pypdf>=5.4.0",
    "pandas>=2.2.3",
    "google-cloud-texttospeech>=2.27.0",
]

[project.optional-dependencies]
dev = [
    "isort>=5.13.2",
    "mypy>=1.8.0", 
    "black>=24.3.0",
    "flake8>=6.1.0",
    "bandit>=1.7.6",
    "pytest>=7.4.3",
    "pytest-cov>=4.1.0"
]

[project.scripts]
run = "eda_ai_api.main:app"

[tool.uv.sources]
eda-config = { path = "../../packages/config/python" }
