[project]
name = "onboarding"
version = "0.1.0"
description = "onboarding using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
onboarding = "onboarding.main:run"
run_crew = "onboarding.main:run"
train = "onboarding.main:train"
replay = "onboarding.main:replay"
test = "onboarding.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
