[project]
name = "profile_plugin"
version = "0.1.0"
description = "profile plugin using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0"
]

[project.scripts]
profile_plugin = "profile_plugin.main:run"
test_profile = "profile_plugin.test_profile:test_profile_analysis"
run_crew = "profile_plugin.main:run"
train = "profile_plugin.main:train"
replay = "profile_plugin.main:replay"
test = "profile_plugin.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
