[project]
name = "opportunity_finder"
version = "0.1.0"
description = "opportunity-finder using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[agentops,tools]>=0.76.2,<1.0.0",
]

[project.scripts]
opportunity_finder = "opportunity_finder.main:run"
run_crew = "opportunity_finder.main:run"
train = "opportunity_finder.main:train"
replay = "opportunity_finder.main:replay"
test = "opportunity_finder.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.setuptools]
package-dir = {"" = "src"}